--- a/MOD550-task2/task2.ipynb
+++ b/MOD550-task2/task2.ipynb
@@ -30,16 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "fe9bfef7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
+    "from matplotlib.pylab import beta\n",
     "sys.path.append('../MOD550-task1') # Adjust the path to find data_aquisition module\n",
     "\n",
     "from data_aquisition import DataAquisition as aq\n",
     "import random\n",
+    "import numpy as np\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "\n",
     "class DataModel:\n",
@@ -166,7 +170,83 @@
     "\n",
     "        # Calculate MSE\n",
     "        mse = self.mean_squared_error(y_test, y_pred)\n",
-    "        return b0, b1, mse\n"
+    "        return b0, b1, mse\n",
+    "    \n",
+    "    def linear_regression_multivariate(self, X=None, y=None, sklearn=False):\n",
+    "        \"\"\"\n",
+    "        Performs multivariate linear regression using the least squares method.\n",
+    "        Args:\n",
+    "            X (2D list or array-like): The independent variable values (each row is a sample, each column is a feature).\n",
+    "            y (list or array-like): The dependent variable values.\n",
+    "        Returns:\n",
+    "            array: Coefficients of the regression line (including intercept if added to X).\n",
+    "        \"\"\"\n",
+    "\n",
+    "        if X is None and y is None:\n",
+    "            X = self.data[['Runtime', 'Release year', 'Words in title', 'Length of title']].to_numpy()\n",
+    "            y = self.data['Rating'].to_numpy()\n",
+    "        elif X is None or y is None:\n",
+    "            raise ValueError(\"Both X and y must be provided if one is provided.\")\n",
+    "        \n",
+    "        \n",
+    "        if not sklearn:\n",
+    "            # Calculate beta using the normal equation, given in presentation 008. Gives intercept at 0.\n",
+    "            beta = np.linalg.inv(X.T @ X) @ X.T @ y\n",
+    "\n",
+    "\n",
+    "        else: \n",
+    "            # Using sklearn library for linear regression, which allows intercept another place than 0. \n",
+    "            linreg = LinearRegression(fit_intercept=True)\n",
+    "            linreg.fit(X, y)\n",
+    "            beta = np.append(linreg.intercept_, linreg.coef_)  # Combine intercept and coefficients\n",
+    "\n",
+    "        return beta\n",
+    "    \n",
+    "    def predict_y_from_x_beta(self, X, beta, intercept=True):\n",
+    "        \"\"\"\n",
+    "        Predicts the dependent variable values given the feature matrix X and regression coefficients beta.\n",
+    "        Args:\n",
+    "            X (numpy array): Feature values.\n",
+    "            beta (numpy array): Regression coefficients. If intercept=True, beta[0] is the intercept.\n",
+    "            intercept (bool): Whether the first element of beta is the intercept.\n",
+    "        Returns:\n",
+    "            numpy.ndarray: Predicted values.\n",
+    "        \"\"\"\n",
+    "        if intercept:\n",
+    "            y = X @ beta[1:] +beta[0]\n",
+    "\n",
+    "        else:\n",
+    "            y = X @ beta\n",
+    "        return y\n",
+    "\n",
+    "\n",
+    "    def test_linreg_multivariate(self, sklearn=False):\n",
+    "        #Creating the training data and testing data\n",
+    "        training_data, unused, testing_data = self.train_val_test_split(train_ratio=0.85, val_ratio=0 ,seed=1) # To get 15 percent test data)\n",
+    "\n",
+    "        #Changing to numpy for faster computations\n",
+    "        X_train = np.array([[row['Runtime'], row['Release year'], row['Words in title'], row['Length of title']] for row in training_data])\n",
+    "        y_train = np.array([row['Rating'] for row in training_data])\n",
+    "\n",
+    "        X_test = np.array([[row['Runtime'], row['Release year'], row['Words in title'], row['Length of title']] for row in testing_data])\n",
+    "        y_test = np.array([row['Rating'] for row in testing_data])  \n",
+    "\n",
+    "        \n",
+    "        beta = self.linear_regression_multivariate(X_train, y_train, sklearn=sklearn)\n",
+    "        \n",
+    "        y_predicted = self.predict_y_from_x_beta(X_test, beta, intercept=sklearn) #If sklearn=True, then intercept is true\n",
+    "        \n",
+    "        mse_from_model = self.mean_squared_error(y_test, y_predicted)\n",
+    "\n",
+    "        if sklearn:\n",
+    "            print(f\"Intercept: {beta[0]}, Coefficients: {beta[1:]}\")\n",
+    "        else:\n",
+    "            print(f\"Intercept: 0, Coefficients: {beta}\")\n",
+    "        print(f\"This gives an MSE of: {mse_from_model}\")\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "\n"
    ]
   },
   {
@@ -179,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "ff0a4fc2",
    "metadata": {},
    "outputs": [
@@ -206,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "1dd490c1",
    "metadata": {},
    "outputs": [
@@ -216,7 +296,7 @@
        "np.float64(6.973642029930682)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "45f4f005",
    "metadata": {},
    "outputs": [],
@@ -246,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "c543eceb",
    "metadata": {},
    "outputs": [
@@ -276,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "7612c1c2",
    "metadata": {},
    "outputs": [
@@ -423,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "id": "f113334d",
    "metadata": {},
    "outputs": [
@@ -431,22 +511,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coefficients: [-0.0015162   0.00336775  0.08760844 -0.00914898]\n"
+      "Corefficients: [-0.0015162   0.00336775  0.08760844 -0.00914898]\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "beta_all = dataw.linear_regression_multivariate(sklearn=False)\n",
     "\n",
-    "\n",
-    "X = dataw.data[['Runtime', 'Release year', 'Words in title', 'Length of title']].to_numpy()\n",
-    "y = dataw.data['Rating'].to_numpy()\n",
-    "\n",
-    "# Calculate beta using the normal equation, given in presentation 008\n",
-    "beta = np.linalg.inv(X.T @ X) @ X.T @ y\n",
-    "\n",
-    "\n",
-    "print(\"Coefficients:\", beta)"
+    "print(f\"Corefficients: {beta_all}\")"
    ]
   },
   {
@@ -454,24 +526,46 @@
    "id": "1c0b2d48",
    "metadata": {},
    "source": [
-    "**Part 8**  \n",
-    "Linear regression on train data, then test."
+    "**Part 8 and 9**  \n",
+    "Linear regression on train data, then test and calculate MSE. Both with interception at 0 and not."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "5c36ecd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intercept: 0, Coefficients: [-0.00132302  0.00336185  0.08844407 -0.00930872]\n",
+      "This gives an MSE of: 1.7989734635545345\n"
+     ]
+    }
+   ],
    "source": [
-    "trainig_data, unused, testing_data = dataw.train_val_test_split(train_ratio=0.7, val_ratio=0 ,seed=1)\n",
-    "X_train = np.array([[row['Runtime'], row['Release year'], row['Words in title'], row['Length of title']] for row in trainig_data])\n",
-    "y_train = np.array([row['Rating'] for row in trainig_data])\n",
-    "\n",
-    "X_test = np.array([[row['Runtime'], row['Release year'], row['Words in title'], row['Length of title']] for row in testing_data])\n",
-    "y_test = np.array([row['Rating'] for row in testing_data])  \n",
-    "\n"
+    "dataw.test_linreg_multivariate(sklearn=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "bc58823c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intercept: -4.284153075235666, Coefficients: [-0.00131697  0.00549715  0.08914819 -0.00905788]\n",
+      "This gives an MSE of: 1.7966876122160411\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataw.test_linreg_multivariate(sklearn=True)"
    ]
   }
  ],
