Midlertidig som funker

--- a/MOD550-task2/task2.ipynb
+++ b/MOD550-task2/task2.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "fe9bfef7",
    "metadata": {},
    "outputs": [],
@@ -44,6 +44,10 @@
     "import random\n",
     "import numpy as np\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from tensorflow import keras\n",
+    "from keras.layers import Input\n",
+    "from keras.layers import Dense\n",
+    "from keras import layers\n",
     "\n",
     "\n",
     "class DataModel:\n",
@@ -198,7 +202,105 @@
     "        # Calculate MSE\n",
     "        mse = self.mean_squared_error(y_test, y_pred)\n",
     "        return b0, b1, mse\n",
+    "\n",
+    "\n",
+    "    def extract_xy(self, data):\n",
+    "        \"\"\"\n",
+    "        Extracts features (X) and target (y) arrays from a list of data dictionaries.\n",
+    "\n",
+    "        Args:\n",
+    "            data (list of dict): Each dict must contain the keys 'Runtime', 'Release year', 'Words in title', 'Length of title', and 'Rating'.\n",
+    "                All values should be convertible to float or int.\n",
+    "\n",
+    "        Returns:\n",
+    "            tuple: (X, y) of numpy arrays\n",
+    "                X: 2D array of shape (n_samples, 4) with features in the order [Runtime, Release year, Words in title, Length of title].\n",
+    "                y : 1D array of shape (n_samples,) with target ratings.\n",
+    "        \"\"\"\n",
+    "        x = np.array([\n",
+    "            [row['Runtime'], row['Release year'], row['Words in title'], row['Length of title']]\n",
+    "            for row in data\n",
+    "        ])\n",
+    "        y = np.array([row['Rating'] for row in data])\n",
+    "        return x, y\n",
     "    \n",
+    "    def create_train_val_test(self):\n",
+    "        \"\"\"\n",
+    "        Splits the dataset into training, validation, and test sets and extracts features and targets.\n",
+    "\n",
+    "        Returns:\n",
+    "            tuple: (x_train, y_train, x_val, y_val, x_test, y_test)\n",
+    "                x_train: 2D array of training features.\n",
+    "                y_train: 1D array of training targets.\n",
+    "                x_val: 2D array of validation features.\n",
+    "                y_val: 1D array of validation targets.\n",
+    "                x_test: 2D array of test features.\n",
+    "                y_test: 1D array of test targets.\n",
+    "        \"\"\"\n",
+    "        self.data_train, self.data_val, self.data_test = self.train_val_test_split(train_ratio=0.7, val_ratio=0.15, seed=1)\n",
+    "        self.x_train, self.y_train = self.extract_xy(self.data_train)\n",
+    "        self.x_val, self.y_val = self.extract_xy(self.data_val)\n",
+    "        self.x_test, self.y_test = self.extract_xy(self.data_test)\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    def make_nn(self, input_dim, layers_units=[64, 32], activation='relu', output_activation='linear', optimizer='adam', loss='mse'):\n",
+    "        \"\"\"\n",
+    "        Creates and compiles a simple feedforward neural network using Keras.\n",
+    "        \n",
+    "        Args:\n",
+    "            input_dim (int): Number of input features.\n",
+    "            layers_units (list): List with the number of units in each hidden layer.\n",
+    "            activation (str): Activation function for hidden layers.\n",
+    "            output_activation (str): Activation function for output layer.\n",
+    "            optimizer (str): Optimizer to use.\n",
+    "            loss (str): Loss function to use.\n",
+    "            \n",
+    "        Returns:\n",
+    "            keras.Model: Compiled Keras model.\n",
+    "        \"\"\"\n",
+    "        model = keras.Sequential()\n",
+    "        # Input layer\n",
+    "        model.add(layers.Input(shape=(input_dim,)))\n",
+    "        # Hidden layers\n",
+    "        for units in layers_units:\n",
+    "            model.add(layers.Dense(units, activation=activation))\n",
+    "        # Output layer\n",
+    "        model.add(layers.Dense(1, activation=output_activation))\n",
+    "        model.compile(optimizer=optimizer, loss=loss)\n",
+    "        return model\n",
+    "    \n",
+    "    def evaluate_nn_architectures(self, x_train, y_train, x_val, y_val, architectures, epochs=25, batch_size=128):\n",
+    "        \"\"\"\n",
+    "        Evaluates multiple neural network architectures on the provided training and validation data.\n",
+    "\n",
+    "        Args:\n",
+    "            x_train (np.ndarray): Training feature data.\n",
+    "            y_train (np.ndarray): Training target data.\n",
+    "            x_val (np.ndarray): Validation feature data.\n",
+    "            y_val (np.ndarray): Validation target data.\n",
+    "            architectures (list): List of architectures, where each architecture is a list specifying the number of units in each hidden layer.\n",
+    "            epochs (int, optional): Number of epochs to train each model. Default is 25.\n",
+    "            batch_size (int, optional): Batch size for training. Default is 128.\n",
+    "\n",
+    "        Returns:\n",
+    "            list: Sorted list of dictionaries, each containing:\n",
+    "            - 'architecture': The architecture tested.\n",
+    "            - 'val_mse': The final validation mean squared error for that architecture.\n",
+    "        \"\"\"\n",
+    "        results = []\n",
+    "        for arch in architectures:\n",
+    "            model = self.make_nn(input_dim=x_train.shape[1], layers_units=arch)\n",
+    "            history = model.fit(x_train, y_train, epochs=epochs, batch_size=batch_size, verbose=0, validation_data=(x_val, y_val))\n",
+    "            val_mse = history.history['val_loss'][-1]\n",
+    "            results.append({'architecture': arch, 'val_mse': val_mse})\n",
+    "        best = results[0]\n",
+    "        print(\"Best architecture:\", best['architecture'], \"Validation MSE:\", best['val_mse'])\n",
+    " \n",
+    "\n",
+    "    def test_nn(self, architectures=[[64, 32]], epochs=20, batch_size=64):\n",
+    "        self.evaluate_nn_architectures(self.x_train, self.y_train, self.x_val, self.y_val, architectures=architectures, epochs=epochs, batch_size=batch_size)\n",
+    "\n",
     "    def linear_regression_multivariate(self, X=None, y=None, sklearn=False):\n",
     "        \"\"\"\n",
     "        Performs multivariate linear regression using the least squares method.\n",
@@ -291,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "ff0a4fc2",
    "metadata": {},
    "outputs": [
@@ -339,17 +441,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "1dd490c1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(6.973642029930682)"
+       "np.float64(6.973640091113956)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "45f4f005",
    "metadata": {},
    "outputs": [],
@@ -379,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "c543eceb",
    "metadata": {},
    "outputs": [
@@ -387,9 +489,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length of training set: 174570\n",
-      "Length of validation set: 37408\n",
-      "Length of test set: 37409\n"
+      "Length of training set: 174568\n",
+      "Length of validation set: 37407\n",
+      "Length of test set: 37408\n"
      ]
     }
    ],
@@ -409,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "7612c1c2",
    "metadata": {},
    "outputs": [
@@ -417,7 +519,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Intercept (b0): -3.9954794702222465 Slope (b1): 0.005376612727458559 MSE: 1.8348214039826294\n"
+      "Intercept (b0): -3.9450135854151833 Slope (b1): 0.005350648013942739 MSE: 1.8227317246494432\n"
      ]
     }
    ],
@@ -444,70 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "54500401",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The history saving thread hit an unexpected error (OperationalError('no such table: history')).History will not be written to the database.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-10-09 08:29:05.658155: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-10-09 08:29:21.223637: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-10-09 08:29:41.809558: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n"
-     ]
-    }
-   ],
-   "source": [
-    "from tensorflow import keras\n",
-    "from tensorflow.keras import layers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "b8073451",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_nn(input_dim, layers_units=[64, 32], activation='relu', output_activation='linear', optimizer='adam', loss='mse'):\n",
-    "    \"\"\"\n",
-    "    Creates and compiles a simple feedforward neural network using Keras.\n",
-    "    \n",
-    "    Args:\n",
-    "        input_dim (int): Number of input features.\n",
-    "        layers_units (list): List with the number of units in each hidden layer.\n",
-    "        activation (str): Activation function for hidden layers.\n",
-    "        output_activation (str): Activation function for output layer.\n",
-    "        optimizer (str): Optimizer to use.\n",
-    "        loss (str): Loss function to use.\n",
-    "        \n",
-    "    Returns:\n",
-    "        keras.Model: Compiled Keras model.\n",
-    "    \"\"\"\n",
-    "    model = keras.Sequential()\n",
-    "    # Input layer\n",
-    "    model.add(layers.Input(shape=(input_dim,)))\n",
-    "    # Hidden layers\n",
-    "    for units in layers_units:\n",
-    "        model.add(layers.Dense(units, activation=activation))\n",
-    "    # Output layer\n",
-    "    model.add(layers.Dense(1, activation=output_activation))\n",
-    "    model.compile(optimizer=optimizer, loss=loss)\n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "008bead1",
    "metadata": {},
    "outputs": [
@@ -515,49 +554,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best architecture: [64, 32] Validation MSE: 1.8335663080215454\n"
+      "Best architecture: [64, 32] Validation MSE: 1.2297163009643555\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "# We'll use the make_nn function to try different architectures and find the one with the lowest validation MSE.\n",
-    "# We'll try a few combinations of hidden layers and units.\n",
-    "\n",
-    "def evaluate_nn_architectures(x_train, y_train, x_val, y_val, architectures, epochs=5, batch_size=128):\n",
-    "    results = []\n",
-    "    for arch in architectures:\n",
-    "        model = make_nn(input_dim=x_train.shape[1], layers_units=arch)\n",
-    "        history = model.fit(x_train, y_train, epochs=epochs, batch_size=batch_size, verbose=0, validation_data=(x_val, y_val))\n",
-    "        val_mse = history.history['val_loss'][-1]\n",
-    "        results.append({'architecture': arch, 'val_mse': val_mse})\n",
-    "    return sorted(results, key=lambda x: x['val_mse'])\n",
-    "\n",
-    "# Prepare data: extract features and target from data_train and data_validation\n",
-    "\n",
-    "def extract_xy(data):\n",
-    "    # Use 'Release year' as feature, 'Rating' as target\n",
-    "    x = np.array([[row['Release year']] for row in data])\n",
-    "    y = np.array([row['Rating'] for row in data])\n",
-    "    return x, y\n",
-    "\n",
-    "x_train, y_train_nn = extract_xy(data_train)\n",
-    "x_val, y_val_nn = extract_xy(data_validation)\n",
-    "\n",
-    "# Try different architectures\n",
+    "dataw.create_train_val_test() \n",
     "architectures = [\n",
-    "    [32],\n",
-    "    [64],\n",
-    "    [128],\n",
     "    [64, 32],\n",
     "    [128, 64],\n",
-    "    [128, 64, 32]\n",
     "]\n",
-    "\n",
-    "results = evaluate_nn_architectures(x_train, y_train_nn, x_val, y_val_nn, architectures, epochs=3, batch_size=256)\n",
-    "best = results[0]\n",
-    "print(\"Best architecture:\", best['architecture'], \"Validation MSE:\", best['val_mse'])"
+    "dataw.test_nn(architectures)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02cde8b8",
+   "metadata": {},
+   "source": [
+    "I am getting a worse MSE from the neural network model, than from the basic linear regression. This might be because the data is mainly linear, and the NN do not capture a pattern."
    ]
   },
   {
@@ -571,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "f113334d",
    "metadata": {},
    "outputs": [
@@ -579,7 +594,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Corefficients: [-0.0015162   0.00336775  0.08760844 -0.00914898]\n"
+      "Corefficients: [-0.01029523  0.0036918   0.07188221 -0.00919613]\n"
      ]
     }
    ],
@@ -600,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "5c36ecd0",
    "metadata": {},
    "outputs": [
@@ -608,8 +623,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Intercept: 0, Coefficients: [-0.00132302  0.00336185  0.08844407 -0.00930872]\n",
-      "This gives an MSE of: 1.7989734635545345\n"
+      "Intercept: 0, Coefficients: [-0.01024131  0.00368991  0.07015701 -0.00883221]\n",
+      "This gives an MSE of: 1.6256500258709978\n"
      ]
     }
    ],
@@ -619,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "bc58823c",
    "metadata": {},
    "outputs": [
@@ -627,8 +642,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Intercept: -4.284153075235666, Coefficients: [-0.00131697  0.00549715  0.08914819 -0.00905788]\n",
-      "This gives an MSE of: 1.7966876122160411\n"
+      "Intercept: -2.631525579120459, Coefficients: [-0.01021205  0.00500058  0.07063948 -0.00867897]\n",
+      "This gives an MSE of: 1.6244342742982034\n"
      ]
     }
    ],
