--- a/MOD550-task2/task2.ipynb
+++ b/MOD550-task2/task2.ipynb
@@ -1012,14 +1012,19 @@
     "The simple linear regression, and the multivariate linear regression are functions that use linear functions. This does not mean that each of the parameters has to follow a linear function, but one can also use the general linear model which is $q = \\beta _0 +\\beta _1 f_1(x_1) +\\beta _2 f_2(x_2) + \\cdots + \\beta _n f_n(x_n)$. Here each equation could be non-linear functions.  \n",
     "Different functions can also be used in the NN-architecture. Here one can change the activation function for example, which activates neurons based on the activation function.  \n",
     "\n",
-    "(b) Discuss how you can use the validation data for the different cases.   \n",
-    "The validation data can be used to verify.\n",
-    "(c) Discuss the different outcome from the different models when using the full dataset to train and when you use a different ML approach.  \n",
-    "(d) Discuss the outcomes you get for K-means and GMM.  \n",
+    "*(b) Discuss how you can use the validation data for the different cases.*     \n",
+    "The validation data is used to avoid overfitting. This is by checking the error from the model on the data, and seeing if this error is increasing while the training error is decreasing.  \n",
+    "The validation data is used in this task in this way only on the exercise with NN. The other exercises and cases are not using the validation data for anything else than testing the model. Because there are so few variables compared to samples, there is no point in using it. When using more advanced linear models, and more features, there is a point. \n",
+    "  \n",
+    "*(c) Discuss the different outcome from the different models when using the full dataset to train and when you use a different ML approach.*  \n",
+    "The outcomes show that there is a lower error when using the neural network model compared to the other variants. Also when using some of the architectures we get a trained model that gives an MSE of higher than the simple linear multivariate regression. \n",
+    "  \n",
+    "*(d) Discuss the outcomes you get for K-means and GMM.*    \n",
     "The outcomes I get from K-means are difficult to interpret. As there are more than one dimention, I cannot accuartely visualize the centroids either. I also find it difficult with the correct amount of clusters.  \n",
     "The positions to the centroids are really a mean of the clusters that give the lowest squared difference between the points and the centroids that are made. This means that at each of these multi-dimentional points, there should be a cluster of values.  \n",
     "I did not notice that I had to create the GMM before today (15.10.2025), so I am sorry that I am not able to answer this question now...  \n",
-    "(e) Discuss how you can integrate supervised and unsupervised methods for your case.*  \n",
+    "  \n",
+    "*(e) Discuss how you can integrate supervised and unsupervised methods for your case.*  \n",
     "In my case I would say that the best approach is to use supervised methods, as the goal with the analysis is mostly to find the best composition of features to arrive at the best rating. This is done by using the NN-model fitting, or linear regression analysis, as I have done in the task. The cluster analysis, or unsupervised method that I have used, is not really relevant to me in this case, as there are little information that I would want to find with the use of such a method. \n"
    ]
   },
